--- a/dst/404.html
+++ b/dst/404.html
@@ -23,7 +23,7 @@
 					<h1>Agriturismo Mauro</h1>
 					<h1>ad Oleis di Manzano</h1>
 				</a>
-				<h2>Cucina tipica e vini friulani</h2>
+				<h2>Cucina contadina e vini friulani</h2>
 			</div>
 			<div id="hright" class="grid_6 clearfix">
 				<div id="buttons">
@@ -41,7 +41,7 @@
 					di Roberto Mauro e Dolores Pascolo<br/>
 					<a title="Agriturismo Mauro su Google Maps" href="">Fraz. Oleis, Via Vittorio Veneto 1, Manzano, 33044 Udine</a><br/>
 					(sulla strada statale tra Manzano e Cividale del Friuli)<br/><br/>
-					tel/fax: +39 3803516322<br/>
+					tel: +39 3803516322<br/>
 				     	mail: <a href="#" title="indirizzo email dell'agriturismo mauro">info@agriturismomauro.it</a>
 				</div>
 			</div>
