--- a/dst/privacy.html
+++ b/dst/privacy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html lang="it">
 	<head>
-		<title>Agriturismo Mauro - ristoro agrituristico e vendita vini | privacy</title>
+		<title>Agriturismo Mauro - Cucina e vendita vini | privacy</title>
 		<meta name="author" content="Luca Postregna" />
 		<meta name="keywords" content="agriturismo, manzano, vini, cucina friulana, cividale del friuli, trattoria, mangiare" />
 		<meta name="description" content="Agriturismo ad Oleis di Manzano" />
@@ -18,14 +18,14 @@
 	</head>
 	<body>
 		<header class="container_16">
-			<div id="title" class="grid_10">
+			<div id="title" class="grid_9">
 				<a href="/" title="home page">
 					<h1>Agriturismo Mauro</h1>
 					<h1>ad Oleis di Manzano</h1>
 				</a>
 				<h2>Cucina contadina e vini friulani</h2>
 			</div>
-			<div id="hright" class="grid_6 clearfix">
+			<div id="hright" class="grid_7 clearfix">
 				<div id="buttons">
 					<div id="facebook">
 						<a href="https://www.facebook.com/AgriturismoMauroVini" title="Agriturismo Mauro su Facebook">
@@ -40,8 +40,8 @@
 				</div>
 				<div id="contacts">
 					di Roberto Mauro e Dolores Pascolo<br/>
-					<a title="Agriturismo Mauro su Google Maps" href="">Fraz. Oleis, Via Vittorio Veneto 1, Manzano, 33044 Udine</a><br/>
-					(sulla strada statale tra Manzano e Cividale del Friuli)<br/><br/>
+					<a title="Agriturismo Mauro su Google Maps" href="">Fraz. Oleis, Via Vitt. Veneto 1, Manzano, 33044 Udine</a><br/>
+					(SP n. 19 Manzano - Cividale del Friuli)<br/><br/>
 					tel: +39 3803516322<br/>
 				     	mail: <a href="#" title="indirizzo email dell'agriturismo mauro">info@agriturismomauro.it</a>
 				</div>
