--- a/dst/404.html
+++ b/dst/404.html
@@ -39,9 +39,8 @@
 					</div> 
 				</div>
 				<div id="contacts">
-					di Roberto Mauro e Dolores Pascolo<br/>
-					<a title="Agriturismo Mauro su Google Maps" href="">Fraz. Oleis, Via Vitt. Veneto 1, Manzano, 33044 Udine</a><br/>
-					(SP n. 19 Manzano - Cividale del Friuli)<br/><br/>
+					di Roberto Mauro e Dolores Pascolo<br/><br/>
+					<a title="Agriturismo Mauro su Google Maps" href="">Via Vittorio Veneto 1, Fraz. Oleis<br/>Manzano, 33044 Udine</a><br/><br/>
 					tel: +39 3803516322<br/>
 				     	mail: <a href="#" title="indirizzo email dell'agriturismo mauro">info@agriturismomauro.it</a>
 				</div>
