--- a/dst/privacy.html
+++ b/dst/privacy.html
@@ -23,7 +23,7 @@
 					<h1>Agriturismo Mauro</h1>
 					<h1>ad Oleis di Manzano</h1>
 				</a>
-				<h2>Cucina contadina e vini friulani</h2>
+				<h2>Cucina friulana e vini dei Colli Orientali</h2>
 			</div>
 			<div id="hright" class="grid_7 clearfix">
 				<div id="buttons">
@@ -119,7 +119,7 @@
 				<a title="La licenza Creative Commons" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">license</a> ::
 				<a title="Privacy" href="/privacy.html">privacy</a> ::
 				<a title="xhtml validator" href="http://validator.w3.org/check?uri=referer">xhtml</a> <a title="css validator" href="http://jigsaw.w3.org/css-validator/check/referer">css</a> ::
-				update: 20140419
+				update: 20140423
 			</footer>
 			<div class="clear"></div>
 		</div>
