--- a/dst/index.html
+++ b/dst/index.html
@@ -21,27 +21,27 @@
 			<div id="title" class="grid_9">
 				<a href="/" title="home page">
 					<h1>Agriturismo Mauro</h1>
-					<h1>ad Oleis di Manzano</h1>
+	<!--				<h1>ad Oleis di Manzano</h1> -->
 				</a>
-				<h2>Cucina friulana e vini dei Colli Orientali</h2>
-			</div>
-			<div id="hright" class="grid_7 clearfix">
-				<div id="buttons">
-					<div id="facebook">
-						<a href="https://www.facebook.com/AgriturismoMauroVini" title="Agriturismo Mauro su Facebook">
-							<p class="hide">facebook</p>
-						</a>
-					</div>
-					<div id="tripadvisor">
+				<h2>Cucina tipica friulana <br/>Vini dei Colli Orientali di Ronchi del Sole</h2>
+        <!--				<div id="buttons">
+					<div id="tripadvisor" class="alpha grid_2">
 						<a href="#" title="Agriturismo Mauro su TripAdvisor">
 							<p class="hide">tripadvisor</p>
 						</a>
 					</div> 
-				</div>
+					<div id="facebook" class="omega grid_1">
+						<a href="https://www.facebook.com/AgriturismoMauroVini" title="Agriturismo Mauro su Facebook">
+							<p class="hide">facebook</p>
+						</a>
+					</div>
+				</div> -->
+			</div>
+			<div id="hright" class="grid_7 clearfix">
 				<div id="contacts">
 					di Roberto Mauro e Dolores Pascolo<br/><br/>
 					<a title="Agriturismo Mauro su Google Maps" href="">Via Vittorio Veneto 1, Fraz. Oleis<br/>Manzano, 33044 Udine</a><br/><br/>
-					tel: +39 3803516322<br/>
+					tel: +39 3803516322, +39 0432740029<br/>
 				     	mail: <a href="#" title="indirizzo email dell'agriturismo mauro">info@agriturismomauro.it</a>
 				</div>
 			</div>
