--- a/dst/index.html
+++ b/dst/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Agriturismo Mauro - Cucina e vendita vini | index</title>
 		<meta name="author" content="Luca Postregna" />
-		<meta name="keywords" content="agriturismo, manzano, vini, cucina friulana, cividale del friuli, trattoria, mangiare" />
+		<meta name="keywords" content="agriturismo, manzano, vini, cucina friulana, ronchi del sole, colli orientali" />
 		<meta name="description" content="Agriturismo ad Oleis di Manzano" />
 		<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
 		<link rel="shortcut icon" href="/images/bassanese.ico" />
@@ -23,7 +23,8 @@
 					<h1>Agriturismo Mauro</h1>
 	<!--				<h1>ad Oleis di Manzano</h1> -->
 				</a>
-				<h2>Cucina tipica friulana <br/>Vini dei Colli Orientali di Ronchi del Sole</h2>
+				<h2>Vini dei Colli Orientali di Ronchi del Sole</h2>
+				<h2>Cucina tipica friulana</h2>
         <!--				<div id="buttons">
 					<div id="tripadvisor" class="alpha grid_2">
 						<a href="#" title="Agriturismo Mauro su TripAdvisor">
