--- a/dst/404.html
+++ b/dst/404.html
@@ -23,7 +23,7 @@
 					<h1>Agriturismo Mauro</h1>
 	<!--				<h1>ad Oleis di Manzano</h1> -->
 				</a>
-				<h2>Vini dei Colli Orientali di Ronchi del Sole</h2>
+				<h2>Vini dei Colli Orientali del Friuli , Ronchi del Sole</h2>
 				<h2>Cucina tipica friulana</h2>
         <!--				<div id="buttons">
 					<div id="tripadvisor" class="alpha grid_2">
