--- a/dst/privacy.html
+++ b/dst/privacy.html
@@ -50,6 +50,8 @@
 		</header>
 		<div id=center>
 			<div class="container_16">
+<div class="grid_16" id="page">
+
 	<h2 class="top20">Informativa sul trattamento dei dati personali </h2>
 
 	<h2>(ex art. 13 D.Lgs. n. 196 del 30 giugno 2003)</h2>
@@ -112,6 +114,8 @@
 		<li>al trattamento di dati personali che lo riguardano a fini di invio di materiale pubblicitario o di vendita diretta o per il compimento di ricerche di mercato o di comunicazione commerciale.</li>
 	</ul></li>
 	</ol>
+
+	<p></div></p>
 			</div>
 		</div><!-- chiuso center -->
 		<div class="container_16">
