--- a/dst/index.html
+++ b/dst/index.html
@@ -39,7 +39,7 @@
 			</div>
 			<div id="hright" class="grid_7 clearfix">
 				<div id="contacts">
-					di Roberto Mauro e Dolores Pascolo<br/><br/>
+					di R. Mauro e D. Pascolo<br/><br/>
 					<a title="Agriturismo Mauro su Google Maps" href="">Via Vittorio Veneto 1, Fraz. Oleis<br/>Manzano, 33044 Udine</a><br/><br/>
 					tel: +39 3803516322, +39 0432740029<br/>
 				     	mail: <a href="#" title="indirizzo email dell'agriturismo mauro">info@agriturismomauro.it</a>
