--- a/dst/privacy.html
+++ b/dst/privacy.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<header class="container_16">
-			<div id="title" class="grid_9">
+			<div id="title" class="grid_10">
 				<a href="/" title="home page">
 					<h1>Agriturismo Mauro</h1>
 				</a>
@@ -37,12 +37,13 @@
 					</div>
 				</div> -->
 			</div>
-			<div id="hright" class="grid_7 clearfix">
+			<div id="hright" class="grid_6 clearfix">
 				<div id="contacts">
 					di R. Mauro e D. Pascolo<br/><br/>
-					<a title="Agriturismo Mauro su Google Maps" href="">Via Vittorio Veneto 1, Fraz. Oleis<br/>Manzano, 33044 Udine</a><br/><br/>
-					tel: +39 3803516322, +39 0432740029<br/>
-				     	mail: <a href="#" title="indirizzo email dell'agriturismo mauro">info@agriturismomauro.it</a>
+					<a title="Agriturismo Mauro su Google Maps" href="">Via Vitt. Veneto 1, Fraz. Oleis<br/>Manzano, 33044 Udine</a><br/><br/>
+				     	mail: <a href="#" title="indirizzo email dell'agriturismo mauro">info@agriturismomauro.it</a><br/>
+					tel: +39 3803516322<br/>
+					+39 0432740029
 				</div>
 			</div>
 			<div class="clear"></div>
@@ -123,7 +124,7 @@
 				<a title="La licenza Creative Commons" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">license</a> ::
 				<a title="Privacy" href="/privacy.html">privacy</a> ::
 				<a title="xhtml validator" href="http://validator.w3.org/check?uri=referer">xhtml</a> <a title="css validator" href="http://jigsaw.w3.org/css-validator/check/referer">css</a> ::
-				update: 20140423
+				update: 20140424
 			</footer>
 			<div class="clear"></div>
 		</div>
