--- a/dst/404.html
+++ b/dst/404.html
@@ -22,7 +22,7 @@
 				<a href="/" title="home page">
 					<h1>Agriturismo Mauro</h1>
 				</a>
-				<h2>Colli Orientali del Friuli, Ronchi del Sole</h2>
+				<h2>Vini dei Colli Orientali del Friuli, Ronchi del Sole</h2>
 				<h2>Cucina tipica friulana</h2>
         <!--				<div id="buttons">
 					<div id="tripadvisor" class="alpha grid_2">
