--- a/dst/privacy.html
+++ b/dst/privacy.html
@@ -39,7 +39,7 @@
 			</div>
 			<div id="hright" class="grid_6 clearfix">
 				<div id="contacts">
-					di R. Mauro e D. Pascolo<br/><br/>
+					di Roberto Mauro<br/><br/>
 					<a title="Agriturismo Mauro su Google Maps" href="">Via Vitt. Veneto 1, Fraz. Oleis<br/>Manzano, 33044 Udine</a><br/><br/>
 				     	<a href="#" title="indirizzo email dell'agriturismo mauro">info@agriturismomauro.it</a><br/>
 					tel: +39 3803516322<br/>
@@ -124,7 +124,7 @@
 				<a title="La licenza Creative Commons" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">license</a> ::
 				<a title="Privacy" href="/privacy.html">privacy</a> ::
 				<a title="xhtml validator" href="http://validator.w3.org/check?uri=referer">xhtml</a> <a title="css validator" href="http://jigsaw.w3.org/css-validator/check/referer">css</a> ::
-				update: 20140424
+				update: 20140429
 			</footer>
 			<div class="clear"></div>
 		</div>
