--- a/dst/index.html
+++ b/dst/index.html
@@ -97,8 +97,21 @@
 </div><!-- chiuso horizontalaccordin -->
 <div id="images" class="grid_7 clearfix">
 	<div id="slider">
-		<img src="/images/agriturismo01.jpg" title="foto 1" alt="foto 1" />
-		<img src="/images/agriturismo02.jpg" title="foto 2" alt="foto 2" />
+		<img src="/images/slides/esterno_03.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/esterno_01.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/esterno_02.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/esterno_04.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/esterno_05.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/esterno_06.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/interno_01.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/interno_02.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/interno_03.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/interno_04.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/interno_05.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/interno_06.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/interno_07.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/interno_08.jpg" title="foto 1" alt="foto 1" />
+		<img src="/images/slides/vini_01.jpg" title="foto 1" alt="foto 1" />
 	</div>
 	<div id="controls">
                 <a href="#" id="start" title="play">Play</a>
