--- a/dst/index.html
+++ b/dst/index.html
@@ -58,7 +58,13 @@
 
 <section>
 
-	<p>descrizione agriturismo</p>
+	<p>L&#8217;<em>Agriturismo Mauro</em> ad Oleis di Manzano, a due passi dall&#8217;<a href="http://www.abbaziadirosazzo.it" title="sito internet dell&#39;abbazia di rosazzo">Abbazia di Rosazzo</a>, nasce dalla passione di Roberto e Dolores per la cantina ed i piatti tipici friulani.</p>
+
+	<p>A disposizione ci sono 50 posti a sedere, dei quali 10 nel terrazzo all&#8217;esterno, è adatto ad ospitare pranzi e cene di amici, compleanni e cerimonie.</p>
+
+	<p>È aperto tutto l&#8217;anno, tutti i giorni della settimana, a pranzo ed a cena, dalle ore 10 alle ore 24.</p>
+
+	<p>Dispone di un ampio cortile e parcheggio.</p>
 
 </section>
 </li>
@@ -68,7 +74,20 @@
 
 <section>
 
-	<p>elenco piatti</p>
+	<p>I piatti dell&#8217;<em>Agriturismo Mauro</em> si basano sulla cucina friulana semplice e genuina. </p>
+
+	<p>I nostri clienti posso apprezzare piatti di stagione basati su:</p>
+
+	<ul>
+		<li>pasta fatta in casa</li>
+		<li>minestroni di orzo e fagioli</li>
+		<li>affettati di produzione propria di animali allevati in azienda</li>
+		<li>carni alla brace</li>
+		<li>frittate con le erbe di stagione</li>
+		<li>salame e cipolla</li>
+		<li>coniglio e polenta con ricette tradizionali</li>
+		<li>dolci fatti in casa.</li>
+	</ul>
 
 </section>
 </li>
@@ -78,7 +97,18 @@
 
 <section>
 
-	<p>elenco vini</p>
+	<p>L&#8217;<em>Agriturismo Mauro</em> nasce come azienda agricola per la produzione e la vendita diretta di vini friulani.</p>
+
+	<p>L&#8217;azienda famigliare coltiva 5 ettari di vigneti, Roberto si occupa di ogni aspetto dalla potatura all&#8217;imbottigliamento.</p>
+
+	<p>È possibile acquistare i nostri vini sia in bottiglia che in formati più grandi direttamente nella sede della nostra azienda. Disponiamo di:</p>
+
+	<ul>
+		<li>merlot</li>
+		<li>cabernet franc</li>
+		<li>friulano</li>
+		<li>pinot grigio</li>
+	</ul>
 
 </section>
 </li>
@@ -88,7 +118,7 @@
 
 <section>
 
-	<p>newsletter</p>
+	<p>work in progress!</p>
 
 </section>
 </li>
