--- a/dst/index.html
+++ b/dst/index.html
@@ -58,7 +58,7 @@
 
 <section>
 
-	<p>L&#8217;<em>Agriturismo Mauro</em> ad Oleis di Manzano, a due passi dall&#8217;<a href="http://www.abbaziadirosazzo.it" title="sito internet dell&#39;abbazia di rosazzo">Abbazia di Rosazzo</a>, nasce dalla passione di Roberto e Dolores per la cantina ed i piatti tipici friulani.</p>
+	<p>L&#8217;<em>Agriturismo Mauro</em> ad Oleis di Manzano, a due passi dall&#8217;<a href="http://www.abbaziadirosazzo.it" title="sito internet dell&#39;abbazia di rosazzo">Abbazia di Rosazzo</a> e dal fiume Natisone, nasce dalla passione di Roberto e Dolores per la cantina ed i piatti tipici friulani.</p>
 
 	<p>A disposizione ci sono 50 posti a sedere, dei quali 10 nel terrazzo all&#8217;esterno, è adatto ad ospitare pranzi e cene di amici, compleanni e cerimonie.</p>
 
