--- a/dst/index.html
+++ b/dst/index.html
@@ -62,9 +62,7 @@
 
 	<p>A disposizione ci sono 50 posti a sedere, dei quali 10 nel terrazzo all&#8217;esterno, è adatto ad ospitare pranzi e cene di amici, compleanni e cerimonie.</p>
 
-	<p>È aperto tutto l&#8217;anno, tutti i giorni della settimana, a pranzo ed a cena, dalle ore 10 alle ore 24.</p>
-
-	<p>Dispone di un ampio cortile e parcheggio.</p>
+	<p>È aperto tutto l&#8217;anno, tutti i giorni della settimana, a pranzo ed a cena, dalle ore 10 alle ore 24. Dispone di un ampio cortile e parcheggio.</p>
 
 </section>
 </li>
